<resources>
    <string name="app_name">Water Quality.U</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="alamat">Alamat</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="history">History</string>
    <string name="informasi">Informasi</string>
    <string name="pengujian">Pengujian</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ph">PH</string>
    <string name="suhu">Suhu</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="history_pengujian">History Pengujian</string>
</resources>